--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,7 +1,7 @@
 
 
 .home{
-  display: flex;
+
   max-width: 1200px;
   margin-left: auto;
     margin-right: auto;
@@ -12,4 +12,8 @@
     mask-image: linear-gradient(to bottom, rgba(0,0,0, 1), rgba(0, 0, 0, 0));
     z-index: -1;
     margin-bottom: -150px;
+}
+
+.home__row{
+    display: flex;
 }
